--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pincord",
+  "name": "sudo",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.es.js",
@@ -15,6 +15,9 @@
     "discord-api-types": "^0.37.5",
     "statuses": "^2.0.1",
     "typescript": "next",
-    "vite": "^2.9.11"
+    "vite": "^4.3.9"
+  },
+  "devDependencies": {
+    "wrangler": "^3.1.0"
   }
 }
