--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "yuimarudev",
   "license": "MIT",
   "dependencies": {
-    "@cloudflare/workers-types": "^3.11.0",
     "cloudcord": "./cloudcord",
     "discord-api-types": "^0.37.5",
     "statuses": "^2.0.1",
@@ -18,6 +17,7 @@
     "vite": "^4.3.9"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20230904.0",
     "wrangler": "^3.1.0"
   }
 }
